# network-automation

./: .env.example  .gitignore  COURSE_OUTLINE.md  Makefile  README.md  pyproject.toml
docs/: containerlab-macos.md
final-boss/: claude_desktop_config.json  pyproject.toml
final-boss/docs/: claude-desktop-setup.md  ollama-setup.md  project-spec.md
final-boss/src/reclaim_agent/: __init__.py  server.py  ui.py
final-boss/src/reclaim_agent/tools/: __init__.py  analyzer.py  devices.py  netbox.py
final-boss/src/reclaim_agent/utils/: __init__.py  config.py
final-boss/tests/: test_analyzer.py  test_netbox.py
milestone-1-manual/: README.md
milestone-1-manual/labs/: lab01_curl_netbox.sh  lab02_python_requests.py
milestone-1-manual/lessons/: 01-what-is-an-api.md  02-curl-basics.md  03-python-requests.md
milestone-1-manual/solutions/: lab01_curl_netbox.sh  lab02_python_requests.py
milestone-2-copilot/: README.md
milestone-2-copilot/labs/: inventory.yml  lab01_prompt_crafting.md  lab02_audit_script.py
milestone-2-copilot/lessons/: 01-llm-basics-for-neteng.md  02-prompt-engineering.md  03-ai-assisted-scripting.md
milestone-2-copilot/solutions/: lab02_audit_script.py
milestone-3-agentic/: README.md
milestone-3-agentic/labs/lab01_hello_mcp/: pyproject.toml  server.py
milestone-3-agentic/labs/lab02_netbox_mcp/: pyproject.toml  server.py
milestone-3-agentic/lessons/: 01-what-is-mcp.md  02-building-mcp-server.md  03-hitl-pattern.md
milestone-3-agentic/solutions/lab01_hello_mcp/: server.py
milestone-3-agentic/solutions/lab02_netbox_mcp/: server.py
shared/: README.md
shared/docker/: docker-compose.yml  topology.clab.yml
shared/docker/configs/: switch-01.cfg  switch-02.cfg  switch-03.cfg
shared/docker/mockit/switch-01/templates/: show hostname.txt  show ip arp.txt  show ip interface brief.txt  show version.txt
shared/docker/mockit/switch-02/templates/: show hostname.txt  show ip arp.txt  show ip interface brief.txt  show version.txt
shared/docker/mockit/switch-03/templates/: show hostname.txt  show ip arp.txt  show ip interface brief.txt  show version.txt
shared/scripts/: seed_netbox.py
