[project]
name = "reclaim-agent"
version = "0.1.0"
description = "AI-powered IP reclamation agent - MCP server for automated network IP lifecycle management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "mcp",
    "httpx",
    "python-dotenv",
    "netmiko",
    "pydantic",
    "pydantic-settings",
    "rich",
    "ollama",
    "streamlit",
]

[project.scripts]
reclaim-agent = "reclaim_agent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reclaim_agent"]

# ---------------------------------------------------------------------------
# Development dependencies (install with: uv pip install -e ".[dev]")
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
